qmake/generators/win32/msvc_nmake.h
@@ -53,6 +53,7 @@ class NmakeMakefileGenerator : public Win32MakefileGenerator
     bool writeMakefile(QTextStream &);
     void writeImplicitRulesPart(QTextStream &t);
     void writeBuildRulesPart(QTextStream &t);
+    void writeLinkCommand(QTextStream &t, const QString &extraFlags = QString(), const QString &extraInlineFileContent = QString());
     void init();
 
 protected:
